# Interpolation

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
data/: data11.csv  data11.ods
src/: #point.hpp#  CMakeLists.txt  determinant.hpp  determinant.tcc  main.cpp  matrice.hpp  matrice.tcc  pavage.hpp  pavage.tcc  point.hpp  point.tcc  simplexe.hpp  simplexe.tcc
test/: #CMakeLists.txt#  CMakeLists.txt  test_determinant.cpp  test_pavage.cpp  test_simplexe.cpp
tests/: CMakeLists.txt
